Wed Sep 07 14:45:53 2016  Jiri (George) Lebl <jirka@5z.com>

	* ve/ve-misc.c: ignore a warning in ve_strftime

Wed Sep 21 18:47:47 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c: simplify abs_sq for real numbers

Wed Aug 24 17:58:18 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/complex-analysis-mesh.gel,
	  examples/complex-analysis-wandering-ball.gel: two visualizations of
	  complex mappings
	
	* src/graphing.c: LinePlotDrawPoints and LinePlotDrawLine now accept
	  a column vector of complex numbers to draw.

	* help/C/genius.xml: document the above.

Sat Jul 09 00:14:53 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, src/funclib.c,
	  lib/linear_algebra/linear_algebra.gel: string fixes from
	  Anders Jonsson.

	* src/eval.c: fix segfault when trying to swap a protected id using
	  swapwith.

Fri Jul 08 23:52:05 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: Apply patch from Anders Jonsson to fix quite a
	  few typos in the manual.

Fri Jul 08 23:46:02 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix StripZeroColumns when a zero matrix is passed
	  in.

	* help/C/genius.xml: fix Planetmath links (thanks to Anders Jonsson).
	  Also add a couple more wikipedia links and a couple of details in
	  various places.

	* src/calc.h: raise year to 2016

Thu Jun 09 16:56:00 2016  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, lib/combinatorics/factorial.gel:
	  Apply patch from Anders Jonsson to fix Subfactorial (definition
	  wrong).  Also, let Subfactorial, Factorial, DoubleFactorial
	  take a matrix and apply function on matrix.

	* lib/functions/elementary.gel: fix acos
	
	* src/geniustests.txt, src/longtest.gel: Add a few tests including
	  test for some inverse trig functions

	* src/eval.c, src/funclib.c, src/gnome-genius.c, src/mpwrap.c,
	  help/C/genius.xml, lib/equation_solving/newton.gel,
	  lib/misc/misc.gel, lib/combinatorics/recursive_sequences.gel: