@@ -1,3 +1,13 @@
+Wed Sep 21 18:55:34 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Add LinePlotWaitForClick and LinePlotMouseLocation
+	  for interactive programs
+
+	* help/C/genius.xml: document the above
+
+	* examples/: Make wandering ball interactive and add two Mandelbrot
+	  set examples, plus a Newton's fractal example
+
 Wed Sep 07 14:45:53 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* ve/ve-misc.c: ignore a warning in ve_strftime
